clusters/homelab/apps/octobot/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finance
  labels:
    app.kubernetes.io/name: finance
    app.kubernetes.io/part-of: homelab
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
